navbar fixes, billing page wrap text fix

--- a/frontend/src/components/TripComponents/Page.css
+++ b/frontend/src/components/TripComponents/Page.css
@@ -83,6 +83,7 @@
   position: absolute;
   width: 100%;
   background: white;
+  border-bottom: 1px solid rgba(133, 133, 133, 0.476)
 
 }
 
@@ -267,6 +268,7 @@ a:active {
 .plan-details-description {
     display: flex;
     flex-direction: row;
+    
     width: 100%;
     height: auto;
     border-bottom: 1px solid rgba(133, 133, 133, 0.476);
@@ -294,13 +296,14 @@ a:active {
 
 .plan-details-description-right {
     text-align: left;
-    padding: 15px 15px 0 15px;
+    padding: 15px;
+    flex-wrap: wrap;
     width: 66%;
 }
 
 @media (max-width: 600px) {
     .plan-details-description-right {
-        width: 100%;
+        width: 92%;
         height: auto;
     }
 }
